--- a/Lab 2 - Flexbox & Grid/gridticket/css/style.css
+++ b/Lab 2 - Flexbox & Grid/gridticket/css/style.css
@@ -1,44 +1,50 @@
 * {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     box-sizing: border-box;
 }
 
 body {
+    font-family: "Helvetica Neue", sans-serif;
     margin: 0;
+    position: relative;
 }
 
-.display-none {
-    display: none;
-}
-
-.pic {
-    background-image: url(../images/festival.jpg);
+body::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    opacity: 0.3;
+    z-index: -1;
+    background-image: url("https://images.pexels.com/photos/1105666/pexels-photo-1105666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
-    width: 100vw;
-    height: 100vh;
+}
+
+.grid {
+    display: grid;
 }
 
 header {
     background-color: black;
+    color: white;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 1.5em 0;
 }
 
 header h1 {
-    margin-top: 0;
+    letter-spacing: 8px;
+    font-size: 2em;
+    margin: 0;
+    padding-bottom: 0.5em;
 }
 
 header p {
-    padding-top: 0;
-    font-weight: lighter;
-    padding-bottom: 2em;
-}
-
-header h1, p {
-    letter-spacing: 0.5em;
-    text-align: center;
-    padding-top: 1em;
-    color: white;
+    letter-spacing: 5px;
+    font-size: 0.7em;
+    margin: 0;
 }
 
 .image {
@@ -48,5 +54,117 @@ header h1, p {
 
 .image img {
     max-width: 100%;
-    width: 400px;
+    width: 200px;
+}
+
+.ticket-details {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.ticket-details div {
+    border: 1px solid black;
+    padding: 1em;
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+}
+
+.date {
+    font-size: 0.9em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.admit {
+    font-size: 0.9em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.price {
+    grid-column: -3 / -1;
+    grid-row: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.display-none {
+    display: none;
+    font-size: 0.9em;
+    letter-spacing: 0!important;
+    font-weight: unset!important;
+    text-transform: unset!important;
+}
+
+@media(min-width: 810px) {
+    .grid {
+        grid-template-rows: 70% 30%;
+    }
+    header {
+        background-color: unset;
+        color: black;
+        display: grid;
+        padding: 0;
+        border: 1px solid black;
+    }
+
+    header h1 {
+        font-size: 5em;
+        grid-row: 2;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    header p {
+        grid-row: 1;
+        display: flex;
+        justify-content: center;
+        align-items: flex-end;
+    }
+
+    .image {
+        grid-column: 2;
+        grid-row: 1 / 3;
+        border: 1px solid black;
+        padding: 3em 0;
+    }
+
+    .display-none {
+        display: unset;
+        grid-row: 2;
+        grid-column: 1 / 4;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0!important;
+    }
+
+    .date {
+        font-size: 1.4em;
+        padding: 0.5em 1em!important;
+    }
+
+    .price {
+        grid-column: 3;
+        grid-row: 1;
+        font-size: 1.4em;
+        padding: 0.5em 1em!important;
+    }
+
+    .admit {
+        font-size: 1.4em;
+        padding: 0.5em 1em!important;
+    }
+
+    .ticket-details {
+        grid-template-rows: 55% 45%;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
 }
